# euler-1d-multiphase-methods

./: .gitignore  CMakeLists.txt  build.bat  build.sh  mesh.hpp
drafting/: DG.cpp  DG.hpp.gch  DG.out  DGSEM.cpp  plot_solution.py
examples/: DGSEM.py  euler_HLLC.cpp  isentropic_solution.py  test_DGSEM.py
src/boundary/: boundary_conditions.hpp  boundary_conditions_concepts.hpp
src/boundary_conditions/: bc_base.hpp  outflow.hpp  periodic.hpp
src/field/: field.hpp
src/fv_framework/: fv_framework.hpp
src/fv_framework/field/: field.hpp
src/fv_framework/mesh/: mesh_1d.hpp
src/fv_framework/physics/: burgers_flux.hpp  euler.hpp
src/fv_framework/scheme/: numerical_scheme.hpp
src/fv_framework/time_integration/: explicit_euler.hpp  runge_kutta.hpp  time_integrator.hpp
src/io/: output.hpp
src/mesh/: mesh.hpp  mesh_1d.hpp
src/physics/: euler.hpp  flux_model.hpp  physics_concepts.hpp
src/physics/Euler/: euler.hpp  euler_concepts.hpp  isentropic_solution.hpp
src/physics/Euler/entropy_flux/: chandrashekar.hpp  entropy_flux_concepts.hpp  ismail_roe.hpp
src/physics/numerical_flux/: numerical_flux_concepts.hpp  rusanov.hpp
src/scheme/: DG.hpp  DGSEM.hpp  DGSEM_entropy_stable.hpp  DG_concepts.hpp  classic_discontinuous_galerkin.hpp  first_order_fv.hpp  numerical_scheme.hpp
src/time_integration/: runge_kutta.hpp
src/utils/: functional.hpp
src/utils/basis/: basis_concepts.hpp  lagrange.hpp  legendre.hpp
src/utils/quadrature/: gauss_legendre.hpp  gauss_lobatto_legendre.hpp  gl_quadrature_data.hpp  gll_quadrature_data.hpp  quadrature_concepts.hpp
temp_garbage/: DG.py  DGSEM.py  coefsandweights.py  isentropic_solution.py
testing/: plot_solution.py  plot_toro_tube.py  test.cpp  test_DG.cpp  test_DGSEM.cpp  test_DGSEM_Entropy_Stable.cpp  test_DG_variants.cpp  toro_tube.cpp
tests/: CMakeLists.txt  run_all_tests.cpp  test_dg_scheme.cpp  test_euler.cpp  test_field.cpp  test_framework.hpp  test_gauss_legendre.cpp  test_lagrange.cpp  test_legendre.cpp  test_mesh.cpp  test_runge_kutta.cpp  test_rusanov.cpp
